--- a/package.json
+++ b/package.json
@@ -8,20 +8,32 @@
     "start": "node server.js",
     "dev-ts": "ts-node-dev ./src/server.ts"
   },
+  "testEnvironment": "node",
   "author": "qureshiowais91@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^7.0.1",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-validator": "^7.0.1",
     "ioredis": "^5.3.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.15",
+    "@babel/node": "^7.22.15",
+    "@babel/preset-env": "^7.22.15",
+    "jest": "^29.6.4",
+    "supertest": "^6.3.3"
   }
 }
